--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend for spotify collab app",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
+    "start:watch": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --print-config .eslintrc.json | eslint-config-prettier-check"
   },
