--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,18 @@
 {
-  "extends": ["airbnb-base", "prettier", "plugin:prettier/recommended"],
-  "plugins": ["prettier"],
+  "extends": [
+    "airbnb-base",
+    "prettier",
+    "plugin:prettier/recommended",
+    "plugin:jest/recommended"
+  ],
+  "plugins": ["prettier", "import", "jest"],
   "rules": {
     "prettier/prettier": ["error", { "singleQuote": true }],
     "linebreak-style": ["error", "windows"],
     "quotes": ["error", "single"]
+  },
+  "env": {
+    "node": true,
+    "jest/globals": true
   }
 }
