--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "start:watch": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest test",
+    "test:watch": "npm run test -- --watch",
     "lint": "eslint --print-config .eslintrc.json | eslint-config-prettier-check"
   },
   "repository": {
@@ -22,7 +23,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
+    "eslint-plugin-jest": "^21.21.0",
     "express": "^4.16.3",
+    "jest": "^23.5.0",
     "mongoose": "^5.2.7"
   },
   "devDependencies": {
