--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint-plugin-jest": "^21.21.0",
     "express": "^4.16.3",
     "jest": "^23.5.0",
-    "mongoose": "^5.2.7"
+    "mongoose": "^5.2.7",
+    "sinon": "^6.1.5"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
