Configured Spotify Authentication
- Configured passport.js to work with Spotify strategy
- Added 3 new authentication endpoints for login, callback, logout
- Updated user db model

Signed-off-by: Yasir Al Shekerchi <yalshekerchi@outlook.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,9 @@
   ],
   "plugins": ["prettier", "import", "jest"],
   "rules": {
-    "prettier/prettier": ["error", { "singleQuote": true }],
+    "prettier/prettier": ["error", {
+      "singleQuote": true
+    }],
     "linebreak-style": ["error", "windows"],
     "quotes": ["error", "single"]
   },
