--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   "homepage": "https://github.com/thechausenone/spotify-collab-backend#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^6.0.0",
     "eslint-plugin-jest": "^21.21.0",
     "express": "^4.16.3",
     "jest": "^23.5.0",
-    "mongoose": "^5.2.7"
+    "mongoose": "^5.2.7",
+    "passport": "^0.4.0",
+    "passport-spotify": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
