feat(debug): add config
 * add `npm run debug` command to package.json
 * add debug configuration to launch.json

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:watch": "nodemon index.js",
     "test": "jest test",
     "test:watch": "npm run test -- --watch",
+    "debug": "nodemon --inspect=2299 index.js",
     "lint": "eslint --print-config .eslintrc.json | eslint-config-prettier-check"
   },
   "repository": {
