--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,26 @@
   "configurations": [
     {
       "type": "node",
+      "request": "attach",
+      "name": "Attach",
+      "port": 2299
+    },
+    {
+      "type": "node",
+      "request": "attach",
+      "name": "Attach by Process ID",
+      "processId": "${command:PickProcess}"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch via NPM",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run-script", "debug"],
+      "port": 2299
+    },
+    {
+      "type": "node",
       "request": "launch",
       "name": "Jest Tests",
       "program": "${workspaceRoot}\\node_modules\\jest\\bin\\jest.js",
