--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
     "prettier/prettier": ["error", {
       "singleQuote": true
     }],
-    "linebreak-style": ["error", "windows"],
+    "linebreak-style": ["error"],
     "quotes": ["error", "single"]
   },
   "env": {
