--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,10 +7,13 @@
   ],
   "plugins": ["prettier", "import", "jest"],
   "rules": {
-    "prettier/prettier": ["error", {
-      "singleQuote": true
-    }],
-    "linebreak-style": ["error"],
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": true
+      }
+    ],
+    "linebreak-style": ["error", "windows"],
     "quotes": ["error", "single"]
   },
   "env": {
